# freenet-scaffold

./: Cargo.toml  README.md  crates.nix  flake.nix
src/: contract.rs  lib.rs
